deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynginx
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mynginx
  template:
    metadata:
      labels:
        run: mynginx
    spec:
      containers:
      - image: hans9102/frontapp:1.0
        name: mynginx
        ports:
        - containerPort: 80
---
