backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: back

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
  labels:
    app: back                                                                                                                                                          
spec:
  replicas: 1                                                                                                                                                               
  selector:
    matchLabels:                                                                                                                                                            
      app: back                                                                                                                                                           
  template:
    metadata:                                                                                                                                                               
      labels:                                                                                                                                                               
        app: back                                                                                                                                                          
    spec:
      containers:                                                                                                                                                           
      - name: back                                                                                                                                                    
        image: gkstnals24/backapp:5.0                                                                                                                                         
        ports:                                                                                                                                                              
        - containerPort: 3000
      - name: db                                                                                                                                                          
        image: mongo
