service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluebird-svc
     annotations:
       service.beta.kubernetes.io/aws-load-balancer-type: "external"
       service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
       service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
       service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-07a8b863a0128f763,subnet-01f7b8de53f2c0b42,subnet-0840ed118bc47762f
  labels:
    app: bluebird
spec:
  selector:
    app: bluebird
  type: LoadBalancer
  ports:
    - port: 80
            targetPort: 8080
            protocol: TCP
      #nodePort: 30000
