alb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alb-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    external-dns.alpha.kubernetes.io/hostname: minseok433.shop
spec:
  rules:
    - host: bluebird.minseok433.shop 
      http:
        paths:
          - path: /back*
            backend:
              serviceName: back
              servicePort: 80
          - path: /*
            backend:
              serviceName: front
              servicePort: 80
